include(UseDDeps)
include(UseDUnittest)

include_directories( ${CMAKE_CURRENT_SOURCE_DIR} )

include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/iface )

ADD_SUBDIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/impl )
include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/impl/h3d/ext )
include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/impl/glfw/ext )
include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/impl/polyvox/ext )
#include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/impl/breakpad )
#include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/impl/bullet )
#include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/impl/csound )
#include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/impl/flac )
#include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/impl/glfw )
#include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/impl/h3d )
#include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/impl/lzma )
#include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/impl/lzo )
#include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/impl/openal )
#include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/impl/polyvox )
#include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/impl/theora )
#include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/impl/vorbis )

file(STRINGS ../build.rf files REGEX ^\".*\"$)
FOREACH(file ${files})
	STRING(REGEX REPLACE "^\"[a-zA-Z0-9]+/(.+)\"$" "\\1;" source "${file}")
	SET(sources ${source} ${sources})
ENDFOREACH(file)

ADD_EXECUTABLE( NawiaClient3D ${sources} )
